<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingModeActivity">

    <TextView
        android:id="@+id/textViewDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/string_difficulty"
        android:textColor="@color/colorIcons"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:chipSpacing="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDifficulty"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEasy"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="1"
            android:text="@string/easy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMedium"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="2"
            android:text="@string/medium" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHard"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="3"
            android:text="@string/hard" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAny"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="-1"
            android:text="@string/string_any" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textViewCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/string_categories"
        android:textColor="@color/colorIcons"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="15dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonOk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCategories" />

    <Button
        android:id="@+id/buttonOk"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>