<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".WordDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_guesses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewGuessed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_guessed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/textViewGuessedCount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewGuessedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/textViewGuessed"
            app:layout_constraintRight_toLeftOf="@id/textViewNotGuessed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNotGuessed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_not_guessed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/textViewGuessedCount"
            app:layout_constraintRight_toLeftOf="@id/textViewNotGuessedCount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNotGuessedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/textViewNotGuessed"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputWord"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/string_word"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_guesses">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextWord"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTranscription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_transcription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_speech"
        app:layout_constraintTop_toBottomOf="@id/inputWord">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTranscription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="28"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_speech"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:icon="@drawable/ic_speech"
        app:layout_constraintBottom_toBottomOf="@id/inputTranscription"
        app:layout_constraintLeft_toRightOf="@id/inputTranscription"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/inputTranscription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTranslation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/string_translation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTranscription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTranslation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@id/textViewDifficulty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewDifficulty" />

    <TextView
        android:id="@+id/textViewDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="?android:attr/colorBackground"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/string_difficulty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTranslation" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDifficulty"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_easy"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/string_easy_not_caps" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_medium"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_medium_not_caps" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_hard"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/string_hard_not_caps" />
    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@id/textViewCategories"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewCategories" />

    <TextView
        android:id="@+id/textViewCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="?android:attr/colorBackground"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/string_categories"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_difficulty" />

    <HorizontalScrollView
        android:id="@+id/scrollViewChips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCategories">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:singleLine="true"
            app:singleSelection="true" />
    </HorizontalScrollView>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@id/textViewTranslations"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewTranslations" />

    <TextView
        android:id="@+id/textViewTranslations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="?android:attr/colorBackground"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/string_translations"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollViewChips" />

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/string_error_emty_translation_list"
        android:textColor="@color/colorError"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTranslations" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_translations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/button_edit_save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTranslations" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?android:attr/colorBackground"
        app:layout_constraintBottom_toBottomOf="@id/textViewTranslations"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewTranslations">

        <ImageView
            android:id="@+id/button_add_translation"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/colorBackground"
            android:padding="12dp"
            android:src="@drawable/ic_add_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/string_back"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_edit_save" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_edit_save"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/string_edit"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>